--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Webpack loader to convert files on disk(in any encoding) into a JavaScript UTF-8 string",
   "main": "src/index.js",
   "scripts": {
-    "release": "standard-version",
+    "release": "standard-version --sign",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
